src/styles/isomer-cms/elements/modal.scss
@import './variable';
@import './buttons';

.overlay{
  visibility: visible;
  display: flex;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.7);
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
}

.colorModal{
  z-index: 100;
  position: absolute;
  background: white;
  border-radius: 5px;
  padding: 10px;
  left: 650px;
  top: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;

  .modalButtons {
    @extend .blue;
    margin: 10px;
  }
}

.modalHeader{
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  h1{
    font-size: 24px;
  }

  .bx{
    font-size: 30px;
  }
}

.modalFooter{
  margin: 1rem 0;
}

.modal{
  width: 50%;
  height: 70%;
  background: white;
  padding: 30px;
  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  overflow-y: scroll;

  .modalContent {
    padding: 10px 0px 10px 0px;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1;
  
    .modalButtons {
      padding-top: 20px;
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      margin-left: auto;
    }
  }
}

.modal-warning {
  @extend .modal;
  height: auto;
}

.modal-settings {
  @extend .modal;
  height: initial;
  width: 40%;
}

